Changed CTRL_MASK to CTRL_DOWN_MASK, new Integer to Integer.valueOf, and other minor changes.